...
                fontFamily: "Montserrat",
                fontWeight: FontWeight.w400,
                fontSize: 14,
              ),
              tabs: const [
                Tab(text: 'Boletas'),
                Tab(text: 'Juicios'),
              ],
            ),
          ),

          // Contenido de las tabs
          Expanded(
...
